// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBody renders correctly 1`] = `
.c0 {
  font-family: sans-serif;
  font-size: 1rem;
  padding-top: 1rem;
}

<div>
  <div
    class="c0"
  >
    World
  </div>
</div>
`;

exports[`ModalFooter renders correctly 1`] = `
.c0 {
  padding-top: 1rem;
}

<div>
  <div
    class="c0"
  >
    Today
  </div>
</div>
`;

exports[`ModalHeader renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #e1e1e1;
}

.c0 > div {
  padding-left: .5rem;
  font-weight: bold;
  color: black;
  font-family: sans-serif;
}

<div>
  <div
    class="c0"
  >
    Hello
  </div>
</div>
`;

exports[`renders correctly 1`] = `
.c0 {
  max-height: 300px;
  overflow: scroll;
  margin-top: 15px;
}

<div>
  <div
    class="c0"
  />
</div>
`;
